# gurgl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  deny.toml  install.sh
.claude/: settings.json
.claude/commands/: dev.md  framing-check.md
assets/: mitm_flows.py
docs/: ARCHITECTURE.md  INSTALL.md  PUBLISHING.md  README.md  RECIPES.md  ROADMAP.md  SPEC.md  THREAT-MODEL.md  USAGE.md
examples/: gurgl.toml
examples/scripts/: 01-quickstart-demo.sh  02-vet-before-adopt.sh  03-weekly-drift-audit.sh  04-ci-gate.sh  05-emit-allowlists.sh  06-scrutiny-report.sh  07-snapshot-forensics.sh  08-compare-with-peer.sh  09-scaffold-flightplan.sh  10-live-fetch-demo.sh  README.md
examples/scripts/lib/: common.sh
examples/snapshots/example-mcp/: 1.2.0.json  1.3.0.json
flightplans/: default.toml  fetch-demo.toml
scripts/: deploy.sh
src/: cli.rs  config.rs  diff.rs  discover.rs  emit.rs  flightplan.rs  main.rs  mcp.rs  model.rs  observe.rs  pkgver.rs  plan.rs  proxy.rs  report.rs  sandbox.rs  share.rs  store.rs
tests/: diff.rs
