[package]
name = "gurgl"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Local-first egress hygiene for MCP servers: capture, diff, and allowlist what your AI-agent tools contact on the network."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp", "security", "egress", "supply-chain", "ai-agents"]
categories = ["command-line-utilities"]
repository = "https://github.com/nurbanasaurus/gurgl"
homepage = "https://github.com/nurbanasaurus/gurgl"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"

[profile.release]
strip = true
lto = true
